# zstud-sys-rs

./: Cargo.toml  build.rs  readme.md  zstd.c
src/: lib.rs
